--- a/sonu.html
+++ b/sonu.html
@@ -135,7 +135,7 @@
         <div class="nav">
             <ul>
                 <li><a href="index.html"><i class="fa fa-backward"></i></a></li>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Homes</a></li>
             </ul>
         </div>
         <div class="arijit">
